SFDC Automation/src/objects/Key_Contact__c.object
<CustomObject>
    <description>CSI and Maintenance Contacts</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Contacts</relationshipLabel>
        <relationshipName>Key_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Branch_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether a key contact entry is created because of an all branch contact.</description>
        <label>All Branch Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_24_7__c</fullName>
        <inlineHelpText>Indicate if this Contact is available to contact at all hours of the day.</inlineHelpText>
        <label>Available 24/7?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_From__c</fullName>
        <label>Available From</label>
        <picklist>
            <controllingField>Available_24_7__c</controllingField>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_To__c</fullName>
        <label>Available To</label>
        <picklist>
            <controllingField>Available_24_7__c</controllingField>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSI_Primary_Count__c</fullName>
        <description>Formula to return 1 if the key contact is active and the primary and a CSI contact. This is used in report to count primary key CSI contacts.</description>
        <formula>IF( (ISPICKVAL( Contact_Role__c , &quot;CSI Contact&quot;) &amp;&amp; Contact__r.STATUS_ACTIVE__c = True &amp;&amp; ISPICKVAL( Contact_Type__c , &quot;Primary&quot;) ) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSI Primary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <inlineHelpText>Select which role this Contact serves for this Customer/Branch.</inlineHelpText>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>CSI Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart Mktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFT Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>Contact__r.STATUS_ACTIVE__c = True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Trigger Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>Select the Contact Type.  Only one contact can be listed as Primary for a Customer/Branch.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.STATUS_ACTIVE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Branches</relationshipLabel>
        <relationshipName>Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <description>Joiner object used for CSI and Maintenance Contacts</description>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Key Contacts</relationshipLabel>
        <relationshipName>Key_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HQ_Account_ID__c</fullName>
        <formula>IF(ISBLANK(Contact__r.Account.Parent.Id ) , Contact__r.Account.Id , Contact__r.Account.Parent.Id )</formula>
        <label>HQ Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_CSI__c</fullName>
        <formula>IF( ISPICKVAL( Contact_Role__c , &quot;CSI Contact&quot;)  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Maintenance__c</fullName>
        <formula>IF( ISPICKVAL( Contact_Role__c , &quot;Maintenance Contact&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Primary_Count__c</fullName>
        <description>Formula to return 1 if the key contact is active and the primary and a maintenance contact. This is used in report to count primary key maintenance contacts.</description>
        <formula>IF( (ISPICKVAL( Contact_Role__c , &quot;Maintenance Contact&quot;) &amp;&amp; Contact__r.STATUS_ACTIVE__c = True &amp;&amp; ISPICKVAL( Contact_Type__c , &quot;Primary&quot;) ) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Primary Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Key__c</fullName>
        <externalId>true</externalId>
        <label>Migration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Contact_Role_Key__c</fullName>
        <description>This field is used to validate that a contact is added as a particular  role only once.</description>
        <label>Unique Contact Role Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Customer_Branch_Role_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>To validate that only one contact type and role exists for a customer branch.</description>
        <label>Unique Customer Branch Role Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Key Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Key Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Contacts</pluralLabel>
    <recordTypes>
        <fullName>All_branch_Contact</fullName>
        <active>true</active>
        <description>All branch contact</description>
        <label>All branch Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Contact_Default</fullName>
        <active>true</active>
        <description>Key Contact Default Layout</description>
        <label>Key Contact Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Availabily_From_To_Check</fullName>
        <active>true</active>
        <description>Available To should be greater than Available From</description>
        <errorConditionFormula>ISPICKVAL(Available_24_7__c, &apos;No&apos;) &amp;&amp;    VALUE(SUBSTITUTE(TEXT(Available_From__c), &apos;:00&apos;, &apos;&apos;) )   &gt;= VALUE(SUBSTITUTE(TEXT(Available_To__c), &apos;:00&apos;, &apos;&apos;) )</errorConditionFormula>
        <errorMessage>Available To should be greater than Available From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_all_branch_key_contact</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; 
All_Branch_Contact__c &amp;&amp; 
PRIORVALUE( Contact_Trigger_Toggle__c ) =Contact_Trigger_Toggle__c</errorConditionFormula>
        <errorMessage>All_branch_key_contact_can&apos;t_be_updated .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomerBranchEqualsHQAccount</fullName>
        <active>true</active>
        <description>Validates if the Key Contact&apos;s Parent Account field equals the Ryder HQ account on the Customer/Branch</description>
        <errorConditionFormula>Contact__r.HQ_Account_ID__c   &lt;&gt;  Customer_Branch__r.Ryder_HQ_Account__r.Id</errorConditionFormula>
        <errorMessage>You must select a Customer / Branch or Contact that matches the Account</errorMessage>
    </validationRules>
</CustomObject>